# huggingface-demo

./: .gitignore  README.md  environment.yml  pyproject.toml
src/oneformer/: debug_oneformer.ipynb  nielsrogge_demo.py  oneformersegmentator.py  onformer_segmentator.py  quick_tour_segm.py  run_oneformer.py
src/pipeline/: quick_tour_nlp.py  quick_tour_objdet.py
