[project]
name = "huggingface-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.2.5",
    "matplotlib>=3.9.2",
    "nbstripout>=0.7.1",
    "pre-commit>=4.0.1",
    "scipy>=1.14.1",
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "torchvision>=0.19.1",
    "transformers>=4.45.2",
]
